
syntax = "proto3";

package automotive_ai.common;

message NewTrafficVehicle {
    int32 id = 1;
    int32 model = 2;
    double pos_x = 3;
    double pos_y = 4;
    double pos_z = 5;
    double yaw = 7;
    double pitch = 8;
    double roll = 9;
    double speed = 10;
    enum Indicator {
      None = 0;
      Left = 1;
      Right = 2;
    }

    Indicator indicator = 11; // deprecated, will be removed
    uint32 light_mask = 12;
    uint64 lane_id= 13;
    uint64 road_id = 14;
    string vehicle_profile = 15;
}

message NewTrafficVehicles {
    repeated NewTrafficVehicle vehicles = 1;
}
